<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_header"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:id="@+id/viewpager_layout">
        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/viewpager">
        </android.support.v4.view.ViewPager>

        <me.relex.circleindicator.CircleIndicator
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/indicator"
            app:ci_drawable="@color/colorPrimaryDark"
            app:ci_drawable_unselected="@color/colorPrimary">
        </me.relex.circleindicator.CircleIndicator>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="248dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/no_results_layout"
        android:visibility="gone">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/alert_icon"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_results_found"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accept_button"
        android:text="@string/accept"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        style="@style/Base.Widget.AppCompat.Button.Borderless"/>

</LinearLayout>